--- a/m1/w1/d3/d3.css
+++ b/m1/w1/d3/d3.css
@@ -1,6 +1,7 @@
 body{
     background-color: antiquewhite;
     text-align: center;
+    margin: 0px;
 }
 .logo:hover{
         transform: scaleX(-1); 
@@ -27,31 +28,31 @@ h4{
 }
 .box{
     position: relative;
- }
-  .image {
+}
+.image {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: auto;
-  }
+}
   
-  .overlay {
+.overlay {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #008CBA;
+    background-color: #af770e;
     overflow: hidden;
     width: 100%;
     height: 0;
     transition: .5s ease;
-  }
+}
   
-  .box:hover .overlay {
+.box:hover .overlay {
     height: 100%;
-  }
+}
   
-  .text {
+.text {
     white-space: nowrap; 
     color: white;
     font-size: 20px;
@@ -61,7 +62,7 @@ h4{
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-  }
+}
 .merito{
     color:gray;
     padding-top: 10px;
@@ -69,10 +70,10 @@ h4{
 .sott{
     text-align: left;
     padding-top: 20px;
+    border-left: 3px solid orange;
 }
 #pre{
-    color: red;
-    border-left: 3px solid orange;
+    color: red;    
 }
 h3{
     padding-top: 30px;
