--- a/m1/w5/d2/style.css
+++ b/m1/w5/d2/style.css
@@ -34,37 +34,75 @@ header {
   
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
   header {
     padding: 1em;
   }
-  #icone{
-    color: #a02571;
+
+  .fa-user{
+    color: navy;  
     font-size: 50px;
     position: fixed;
     right: 20px;
-    bottom: 30px;
-    padding: 10px;
+    bottom: 200px;
     z-index: 2500;
-    text-align: right;
     
   }
-  #icone1{
-    color: #a02571;
+  .fa-ghost{
+    color: navy;  
     font-size: 50px;
     position: fixed;
     right: 20px;
-    bottom: 70px;
-    padding: 10px;
+    bottom: 120px;
     z-index: 2500;
-    text-align: right;
+        
   } 
+  .fa-house{
+    color: navy;
+    font-size: 50px;
+    position: fixed;
+    right: 20px;
+    bottom: 50px;
+    z-index: 2500;    
+  }  
 }
 
 @media screen and (max-width: 1199px) {
   header .brand img {
     margin-bottom: 20px;
   }
+  .fa-user{
+    color: navy;  
+    font-size: 50px;
+    position: fixed;
+    right: 70px;
+    top: 10px;
+    z-index: 2500;
+    
+    
+    
+  }
+  .fa-ghost{
+    color: navy;  
+    font-size: 50px;
+    position: fixed;
+    right: 70px;
+    top: 80px;
+    z-index: 2500;
+    
+    
+  } 
+  .fa-house{
+    color: navy;
+    font-size: 50px;
+    position: fixed;
+    right: 70px;
+    bottom: 50px;
+    z-index: 2500;
+    
+    
+  }     
+  
 }
 
 @media screen and (min-width: 1200px) {
@@ -91,6 +129,36 @@ header {
     position: static;
 
   }
+  .fa-user{
+    color: navy;  
+    font-size: 50px;
+    position: fixed;
+    right: 150px;
+    top: 30px;
+    z-index: 2500;
+      
+  }
+  .fa-ghost{
+    color: navy;  
+    font-size: 50px;
+    position: fixed;
+    right: 150px;
+    top: 100px;
+    z-index: 2500;
+    
+    
+  } 
+  .fa-house{
+    color: navy;
+    font-size: 50px;
+    position: fixed;
+    right: 150px;
+    bottom: 50px;
+    z-index: 2500;
+    
+    
+  }     
+  
 }
 
 header nav ul {
@@ -164,37 +232,6 @@ main {
   ;
 }
 
-#icone{
-  color: #a02571;
-  font-size: 50px;
-  position: fixed;
-  right: 20px;
-  top: 0;
-  padding: 10px;
-  z-index: 2500;
-  text-align: right;
-  
-}
-#icone1{
-  color: #a02571;
-  font-size: 50px;
-  position: fixed;
-  right: 20px;
-  top: 70px;
-  padding: 10px;
-  z-index: 2500;
-  text-align: right;
-} 
-#icone2{
-  color: #a02571;
-  font-size: 50px;
-  position: fixed;
-  right: 20px;
-  bottom: 20px;
-  padding: 10px;
-  z-index: 2500;
-  text-align: right;
-}     
 
 
 /* ELEMENTI NEL MAIN - ARTICLE */
@@ -473,7 +510,7 @@ footer a {
   position: relative;
 
 }
-#font{
+.fa-tags{
   position: absolute;
   top: 5px;
   right: 5px;
