--- a/m1/w5/d4/frase.css
+++ b/m1/w5/d4/frase.css
@@ -29,10 +29,11 @@
     color: black;
     font-size: 150%;
     font-weight: normal;
+    margin-bottom: 20px;
 }
 .parole{
     display: inline;
-    text-indent: 10px;
+    text-indent: 30px;
 }
 .parole span {   
     overflow: hidden; 
@@ -44,22 +45,24 @@
     animation-timing-function: linear;
     animation-delay: 0s;
     opacity: 0;
+    color: navy;
+    
 }
 .parole span:nth-child(2) {
-    animation-delay: 3s;
-    color: navy;
+    animation-delay: 2s;
+    
 }
 .parole span:nth-child(3) {
-    animation-delay: 6s;
-    color: navy;
+    animation-delay: 4s;
+    
 }
  
     @keyframes scorri {
         0% { opacity: 0; }
-        2% { opacity: 0; -webkit-transform: translateY(-30px); transform: translateY(-30px); }
-        5% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px);}
-        17% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px); }
-        20% { opacity: 0; -webkit-transform: translateY(30px); transform: translateY(30px); }
-        80% { opacity: 0; }
+        2% { opacity: 0; transform: translateY(-30px); transform: translateY(-30px); }
+        5% { opacity: 1; transform: translateY(0px); transform: translateY(0px);}
+        17% { opacity: 1; transform: translateY(0px); transform: translateY(0px); }
+        20% { opacity: 0; transform: translateY(30px); transform: translateY(30px); }
+        80% {opacity:0; }
         100% { opacity: 0; }
     }
