--- a/m1/w6/test/_var.scss
+++ b/m1/w6/test/_var.scss
@@ -1,11 +1,11 @@
 $container-width:100%;
 
 
-$template: dark;
+$template: none;
 
 $bg-dark: #f5f5f5;
 $fg-dark: black;
 $bg-bright: rgb(151, 96, 223);
 $fg-bright: rgb(136, 88, 0);
 $bg-none: navy;
-$fg-none: wheat;
+$fg-none: rgb(0, 0, 0);
