--- a/m1/w6/test/test.scss
+++ b/m1/w6/test/test.scss
@@ -1,7 +1,7 @@
 @import 'var';
 @import 'function';
 
-$template: p;
+$template: dark;
 
     @if $template == dark {
     body{
@@ -41,7 +41,7 @@ header{
             margin-left: 30px;
             a{
                 text-decoration: none;
-                color: #fff;
+                color: rgb(10, 10, 10);
                 font-size: 25px;
             }
         }
